<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/english_translation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.ybq.android.spinkit.SpinKitView
        style="@style/SpinKitView.Large.Wave"
        android:id="@+id/translationProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:SpinKit_Color="@color/grena"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/translationScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/translationScroll" />

    <ScrollView
        android:id="@+id/translationScroll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/verseTranslation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </ScrollView>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/tafseer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translationScroll" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tafseerType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        app:boxStrokeColor="@color/grena"
        android:hint="@string/tafseer_type"
        app:layout_constraintBottom_toTopOf="@+id/explanationScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/translationScroll">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@color/grena"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/explanationScroll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/verseExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/choose_a_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </ScrollView>

    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationScroll"
        app:layout_constraintVertical_bias="0.242" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/verseReader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/reader"
        android:background="@color/white"
        app:boxStrokeColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playBtn"
        app:layout_constraintTop_toBottomOf="@+id/explanationScroll"
        app:layout_constraintVertical_bias="0.242">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mushafBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grena"
        android:text="@string/see_in_moushaf"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"
        app:layout_constraintVertical_bias="0.767" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/explanationProgressBar"
        style="@style/SpinKitView.Large.Wave"
        app:SpinKit_Color="@color/grena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/dark_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/explanationScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/explanationScroll" />

    <com.github.ybq.android.spinkit.SpinKitView

        style="@style/SpinKitView.Large.Wave"
        app:SpinKit_Color="@color/grena"
        android:id="@+id/readerProgressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/dark_blue"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationScroll" />

    <ImageButton
        android:id="@+id/favBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_empty_bookmark"
        app:layout_constraintBottom_toTopOf="@+id/translationScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/uploadBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_cloud_upload"
        app:layout_constraintBottom_toTopOf="@+id/translationScroll"
        app:layout_constraintEnd_toStartOf="@+id/favBtn"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>